syntax = "proto3";

option go_package = "pkg/capabilities/consensus/datafeeds";

package datafeeds_types;

message DataFeedsOutcomeMetadata {
  // NOTE: list needs to be sorted by feed_id to ensure deterministic encoding
  repeated DataFeedsMercuryReportInfo feedInfos = 1;
}

message DataFeedsMercuryReportInfo {
  string feed_id = 1;
  int64 observation_timestamp = 2;
  int64 benchmark_price = 3;
}